--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,4 +21,5 @@ icubcontrib_set_default_prefix()
 
 # modules that do not need OpenCV
 add_subdirectory(master)
+add_subdirectory(pickAndPlace)
 #add_subdirectory(movePlanner)
