--- a/src/pickAndPlace/CMakeLists.txt
+++ b/src/pickAndPlace/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 2.8.9)
 
 # produce the cmake var PROJECT_NAME
-project(project_grasp-it)
+project(pickAndPlace)
 
 # mandatory use of these packages
 find_package(YARP REQUIRED)
