[master] ReadMe File

--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Copyright: (C) VVV17, Santa Margherita
 # Copyright: (C) Team Orange
-# Authors: Pedro Vicente <pvicente@isr.ist.utl.pt>
+# Authors: Pedro Vicente <pvicente@isr.tecnico.ulisboa.pt>
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
 cmake_minimum_required(VERSION 2.6)
