--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
+# Copyright: (C) VVV17, Santa Margherita
+# Copyright: (C) Team Orange
+# Authors: Pedro Vicente <pvicente@isr.tecnico.ulisboa.pt>
+# CopyPolicy: Released under the terms of the GNU GPL v2.0.
+
 cmake_minimum_required(VERSION 2.6)
 
 set(PROJECTNAME orange-team-superbuild)
