created moveGrounding module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,3 +23,4 @@ icubcontrib_set_default_prefix()
 add_subdirectory(master)
 add_subdirectory(pickAndPlace)
 #add_subdirectory(movePlanner)
+add_subdirectory(moveGrounding)
