--- a/src/movePlanner/CMakeLists.txt
+++ b/src/movePlanner/CMakeLists.txt
@@ -2,40 +2,55 @@
 #C opyright: (C) Team Orange
 # Authors: Pedro Vicente <pvicente@isr.ist.utl.pt>
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
+# requires minimum cmake version
+cmake_minimum_required(VERSION 2.8.9)
 
-cmake_minimum_required(VERSION 2.6)
+# produce the cmake var PROJECT_NAME
+project(movePlanner)
 
-set(PROJECTNAME movePlanner)
-project(${PROJECTNAME})
+# mandatory use of these packages
+find_package(YARP REQUIRED)
+find_package(ICUBcontrib REQUIRED)
 
-find_package(YARP)
-find_package(ICUBcontrib)
-
+# extend the current search path used by cmake to load helpers
 list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
 list(APPEND CMAKE_MODULE_PATH ${ICUBCONTRIB_MODULE_PATH})
 
-include(YarpIDL)
-set(IDL_GENERATED_CODE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
-yarp_idl_to_dir(${PROJECTNAME}.thrift ${IDL_GENERATED_CODE_DIR})
-
+# helpers defining certain macros (e.g. "yarp_install")
 include(YarpInstallationHelpers)
 include(ICUBcontribHelpers)
 include(ICUBcontribOptions)
+
+# specify to install in $ICUBcontrib_DIR/bin
 icubcontrib_set_default_prefix()
 
-file(GLOB source src/*.cpp)
-file(GLOB header include/*.h)
+# import math symbols from standard cmath
+#add_definitions(-D_MY_DEFINITION)
 
-source_group("Source Files" FILES ${source})
-source_group("Header Files" FILES ${header})
+# generate thrift idl file
+yarp_add_idl(IDL_GEN_FILES ${CMAKE_SOURCE_DIR}/idl/${PROJECT_NAME}.thrift)
 
-include_directories(${PROJECT_SOURCE_DIR}/include
-                    ${YARP_INCLUDE_DIRS}
-                    ${IDL_GENERATED_CODE_DIR}/include
-)
+# building module
+include_directories(${YARP_INCLUDE_DIRS}
+                    ${CMAKE_SOURCE_DIR}/src
+                    ${CMAKE_CURRENT_BINARY_DIR}/include/idl/)
 
-add_executable(${PROJECTNAME} ${source} ${header})
+add_executable(${PROJECT_NAME}
+               ${CMAKE_SOURCE_DIR}/src/main.cpp
+               ${CMAKE_SOURCE_DIR}/src/movePlanner.cpp
+               ${CMAKE_SOURCE_DIR}/src/movePlanner.h
+               ${idl}
+               ${IDL_GEN_FILES})
 
-target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES}) 
+target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES})
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
-install(TARGETS ${PROJECTNAME} DESTINATION bin)
+
+# generate ad-hoc project to perform "make uninstall"
+icubcontrib_add_uninstall_target()
+
+#file(GLOB scripts ${CMAKE_SOURCE_DIR}/app/scripts/*.xml)
+#yarp_install(FILES ${scripts} DESTINATION ${ICUBCONTRIB_APPLICATIONS_INSTALL_DIR})
+
+#file(GLOB scripts ${CMAKE_SOURCE_DIR}/app/scripts/*.xml)
+yarp_install(FILES movePlanner.xml DESTINATION ${ICUBCONTRIB_MODULES_INSTALL_DIR})
