changed project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ project(${PROJECTNAME})
 
 find_package(ICUBcontrib)
 list(APPEND CMAKE_MODULE_PATH ${ICUBCONTRIB_MODULE_PATH})
+include(ICUBcontribOptions)
 include(ICUBcontribHelpers)
 
 add_subdirectory(src)
