[objectRecognition] CMake files are fixed

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(master)
 add_subdirectory(pickAndPlace)
 add_subdirectory(movePlanner)
 add_subdirectory(moveGrounding)
+add_subdirectory(objectRecognition)
